<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imglogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnrandom"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/desclogo"
        android:src="@drawable/red_brick" />

    <Button
        android:id="@+id/btnrandom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btncreate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/lblrandom" />

    <Button
        android:id="@+id/btncreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnload"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/lblcreate" />

    <Button
        android:id="@+id/btnload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/lblcreated" />

</RelativeLayout>