<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/laystyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lblstyle" >

        <TextView
            android:id="@+id/lblwalls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblwalls"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/spinwall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/lblfloor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblfloors"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/spinfloor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
    <!--
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/laystyle"
        android:text="@string/lblweather"
        android:textAppearance="?android:attr/textAppearanceMedium" />
        
     <Spinner
        android:id="@+id/spinner3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView5"
        android:layout_marginLeft="30dp" />
    -->

    <TextView
        android:id="@+id/lbloptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/lbloptions"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txtname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lbloptions"
        android:ems="10"
        android:hint="@string/hintname"
        android:inputType="text" >

        <requestFocus />
        <requestFocus />

    </EditText>

    <TextView
        android:id="@+id/lblsize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtname"
        android:text="@string/lblsize"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtgridx"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblsize"
        android:layout_toLeftOf="@+id/lblsizedelimiter"
        android:ems="10"
        android:inputType="number" >

    </EditText>

    <TextView
        android:id="@+id/lblsizedelimiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtgridx"
        android:layout_alignBottom="@+id/txtgridx"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/lblsizedelimiter"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtgridy"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lblsize"
        android:layout_toRightOf="@+id/lblsizedelimiter"
        android:ems="10"
        android:inputType="number" >
    </EditText>

    <TextView
        android:id="@+id/lblstyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtgridx"
        android:text="@string/lblstyle"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnreturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/lblreturn" />

    <Button
        android:id="@+id/btnstartcreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/lblcreate" />

</RelativeLayout>