<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/faded_brick"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/txtgridx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/btnsearch"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hintname"
        android:inputType="text"
        android:textAlignment="center" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtMazeCreator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtgridx"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hintcreator"
        android:inputType="text" />

    <ListView
        android:id="@+id/lstResults"
        android:layout_width="match_parent"
        android:layout_height="258dp"
        android:layout_above="@+id/btnreturn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtMazeCreator" >
    </ListView>

    <Button
        android:id="@+id/btnreturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/lblreturn" />

    <Button
        android:id="@+id/btnsearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtgridx"
        android:layout_alignBottom="@+id/txtgridx"
        android:layout_alignParentRight="true"
        android:text="@string/lblsearch" />

</RelativeLayout>